# intern_wakaama

./: .gitignore  .gitmodules  BootstrapGuideline.md  CMakeLists.txt  README.md
certs/: README.md  bootstrap-server.crt  bootstrap-server.crt.der  bootstrap-server.key  bootstrap-server.key.der  ca.crt  ca.crt.der  ca.key  ca.key.der  cli2.key.pkcs8  cprik.der  lwm2m-client.crt  lwm2m-client.crt.der  lwm2m-client.key  lwm2m-client.key.der  lwm2m-server.crt  lwm2m-server.crt.der  lwm2m-server.key  lwm2m-server.key.der
coap/: transaction.c
core/: bootstrap.c  liblwm2m.c
examples/: CMakeLists.txt
examples/bootstrap_server/: README  bootstrap_info.c  bootstrap_server.c
examples/client/: CMakeLists.txt  lwm2mclient.c  lwm2mclient.h  object_attestation.c  object_security.c  object_server.c
examples/lightclient/: lightclient.c  object_security.c
examples/server/: lwm2mserver.c
examples/shared/: connection.c  connection.h  dtlsconnection.h  mbedtls_random.c  mbedtls_random.h  mbedtlsconnection.c  mbedtlsconnection.h  object_utils.c  object_utils.h  sec_context.c  sec_context.h  shared.cmake  tinydtlsconnection.c
examples/shared/dtls/: CMakeLists.txt  config-ccm-ecdsa-dtls1_2.h  config-ccm-psk-tls1_2.h  config-psa-cid.h  config-psa.h
include/: liblwm2m.h
